# stockmate

./: .gitignore  .prettierignore  .prettierrc  .rustfmt.toml  Cargo.toml  LICENCE  README.md  electron-builder.json  index.html  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.js  vite.config.ts
.github/workflows/: codeql-monthly.yml  codeql-pr.yml  codeql.yml
scripts/: clear.js  reset.js  version.js
src/: App.css  App.tsx  app.css  app.html  cli.rs  config.rs  main.rs  upload.rs  utils.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: migrations.rs
src-tauri/src/utils/: mod.rs  path_handler.rs  sql.rs
src/components/: Header.tsx
src/electron/: main.ts  tsconfig.json
src/pages/: Help.tsx  Photos.tsx  Services.tsx  Settings.tsx
src/routes/: +layout.svelte  +page.svelte
src/routes/help/: +page.svelte
src/routes/services/: +page.svelte
src/routes/settings/: +page.svelte
src/stockmate/: cli.py  config.py  main.py  upload.py
src/ui/: App.css  App.tsx
