[package]
name = "stockmate"
version = "0.0.0"
description = "Upload photos to stock services and social media"
license = "GPL-3.0-or-later"
repository = "https://github.com/magic-forces/stockmate/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stockmate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
#tauri
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9", features = [] }

#plugins
tauri-plugin-dialog = "2.4"
tauri-plugin-log = "2.7"
tauri-plugin-opener = "2.5"
tauri-plugin-prevent-default = "4"
tauri-plugin-single-instance = "2.3"
tauri-plugin-sql = { version = "2.3", features = ["sqlite"] }

#other
sqlx = "0.8"
log = "0.4"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
